[gd_scene load_steps=9 format=2]

[ext_resource path="res://LevelMechanics/Power/PLstraight.png" type="Texture" id=1]
[ext_resource path="res://LevelMechanics/Power/PLCenterActive.png" type="Texture" id=2]
[ext_resource path="res://LevelMechanics/Power/PLCorner.png" type="Texture" id=3]
[ext_resource path="res://LevelMechanics/Power/PLCenterInactive.png" type="Texture" id=4]
[ext_resource path="res://LevelMechanics/Power/PowerLine.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Corner",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Straight",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Inactive",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 5 )

[node name="PowerLine" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Connection" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Straight"

[node name="Center" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Inactive"

[node name="OutletA" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutletA"]
position = Vector2( 16, 0 )
shape = SubResource( 3 )

[node name="OutletB" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutletB"]
position = Vector2( -16, 0 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="Timer" type="Timer" parent="."]
